--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,3 +1,3 @@
-#Thu May 19 22:50:09 SCT 2011
+#Fri May 20 11:37:21 SCT 2011
 eclipse.preferences.version=1
-include_path=0;/utdemo
+include_path=5;com.zend.php.phpunit.CONTAINER\u00050;/utdemo
